- anmeldung completed - styling course, course-times, webform, confirmation - db updated

--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -140,7 +140,7 @@ header#navbar {
             &.menu-kv {
               border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-kv;
 
-              a:hover, a.active {
+              a:hover, a.active-trail, a.active {
                 color: #fff;
                 background-color: @pxl-color-hso-kv;
               }
@@ -148,7 +148,7 @@ header#navbar {
             &.menu-hs {
               border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-hs;
 
-              a:hover, a.active {
+              a:hover, a.active-trail, a.active {
                 color: #fff;
                 background-color: @pxl-color-hso-hs;
               }
@@ -156,7 +156,7 @@ header#navbar {
             &.menu-ks {
               border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-ks;
 
-              a:hover, a.active {
+              a:hover, a.active-trail, a.active {
                 color: #fff;
                 background-color: @pxl-color-hso-ks;
               }
@@ -164,7 +164,7 @@ header#navbar {
             &.menu-ex {
               border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-ex;
 
-              a:hover, a.active {
+              a:hover, a.active-trail, a.active {
                 color: #fff;
                 background-color: @pxl-color-hso-ex;
               }
@@ -250,7 +250,7 @@ header#navbar {
                 }
               }
 
-              &.last {
+              &.last, li {
                 a {
                   border: none;
                 }
