--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -2,14 +2,16 @@
  * Pixelgarage Components
  * --------------------------------------------------*/
 
+// structure
+@import "panel-structure";
+
 // components
 //@import "pxlTest";
 @import "form-login";
+
+// blocks
 @import "block-socials";
 @import "block-language";
-
-// structure
-
 
 // nodes
 @import "node-page";
