--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -73,7 +73,7 @@ body {
 
         h1.page-header {
           //display: none;
-          margin: 50px 0 0;
+          margin: 50px 0 30px;
           padding: 0;
           font-family: @pxl-text-font-light;
           #pxl-mixins.font-size-responsive(@font-size-h1);
