--- a/all/themes/pixelgarage/less/footer.less
+++ b/all/themes/pixelgarage/less/footer.less
@@ -43,7 +43,7 @@
       background-color: @webform-bg-color-input;
     }
     input:focus {
-      .box-shadow(inset 0 0 0.3em @webform-color-shadow);
+      .box-shadow(inset 0 0 0.3em @text-color);
     }
   }
 
