--- a/all/themes/pixelgarage/less/pxlComponents/node-course.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-course.less
@@ -32,33 +32,38 @@
           display: none;
         }
 
-        table.aufeinenblock{
-          margin: 30px 0 50px;
+        table.aufeinenblock, // legacy
+        table.aufeinenblick {
+          margin: 0 0 50px;
 
           tbody {
             padding: 0 20px;
-            font-size: @font-size-base;
 
             tr {
-              th {
+              border-top: 1px solid @pxl-border-color;
+
+              th, td {
+                display: block;
                 padding: 10px 10px 10px 0;
-                width: 50% !important;
+                width: 100% !important;
                 font-family: @pxl-text-font-medium;
-                border-top: 1px solid @pxl-border-color;
+                font-size: @font-size-small;
                 vertical-align: top;
               }
-
               td {
-                padding: 10px 0 10px 10px;
-                width: 50% !important;
-                font-family: @pxl-text-font;
-                border-top: 1px solid @pxl-border-color;
-                vertical-align: top;
+                font-family: @pxl-text-font-light;
               }
 
-              &:last-child th,
-              &:last-child td {
+              &:last-child  {
                 border-bottom: 1px solid @pxl-border-color;
+              }
+
+              @media @tablet {
+                th, td {
+                  display: table-cell;
+                  width: 50% !important;
+                  font-size: @font-size-base;
+                }
               }
             }
           }
