--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -15,6 +15,8 @@
 @pxl-color-hso-ex: rgb(177, 168, 149);
 @pxl-color-hso-gray: rgb(235,235,235);
 
+@pxl-color-bg-button: #FA5050;
+
 @pxl-color-footer: #999;
 @pxl-color-footer-border: #666;
 @pxl-color-footer-bg: #39393E;
