- styling page, webform, views, user, node completed - font awesome updated - db updated

--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -77,7 +77,7 @@ body {
           padding: 0;
           font-family: @pxl-text-font-light;
           #pxl-mixins.font-size-responsive(@font-size-h1);
-          color: @text-color;
+          color: @pxl-color-hso-main;
           line-height: 1;
           border: none;
 
