--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -173,7 +173,7 @@ form.webform-client-form {
       padding: 0;
       border: none;
       #pxl-mixins.border-radius(0);
-      border-top: 1px solid #ccc;
+      border-top: 1px solid @pxl-border-color;
       background: none;
 
       .panel-title {
