--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -52,7 +52,7 @@
           font-size: @font-size-base;
           color: @text-color;
           line-height: 1;
-          border-top: 1px solid #ccc;
+          border-top: 1px solid @pxl-border-color;
         }
       }
 
