--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -16,6 +16,7 @@
 @pxl-color-hso-gray: rgb(235,235,235);
 
 @pxl-color-bg-button: #FA5050;
+@pxl-border-color: #ccc;
 
 @pxl-color-footer: #999;
 @pxl-color-footer-border: #666;
