--- a/all/themes/pixelgarage/less/mixins/text.less
+++ b/all/themes/pixelgarage/less/mixins/text.less
@@ -59,38 +59,62 @@
       .font-size-responsive(@resp-font-size-max);
     }
     h1, h2, h3 {
-      .font-size-responsive(22px);
+      .font-size-responsive(24px);
     }
 
-    p, tbody td {
-      font-family: @pxl-text-font;
-      .font-size-responsive(@font-size-base);
+    p, div, tbody td {
+      font-family: @pxl-text-font-light;
+      font-size: 14px;
       .hyphenate;
+
+      @media @narrow {
+        font-size: @font-size-base;
+      }
     }
 
     li {
-      font-family: @pxl-text-font;
-      .font-size-responsive(@font-size-base);
+      font-family: @pxl-text-font-light;
+      font-size: 14px;
+
+      @media @narrow {
+        font-size: @font-size-base;
+      }
     }
 
     pre, address {
       font-family: @pxl-text-font-light-italics;
-      .font-size-responsive(15px);
+      font-size: 14px;
+
+      @media @narrow {
+        font-size: @font-size-base;
+      }
     }
 
     hr {
       border: 0;
-      border-bottom: 2px solid @text-color;
+      border-bottom: 2px solid @pxl-border-color;
       background: none;
     }
 
-    img, embed, video, audio, iframe {
+    table, tr, th, td {
+      border-color: @pxl-border-color;
+    }
+
+    img {
+      display: block;
+      margin: 0 auto;
+      width: 80%;
+      height: auto;
+      max-width: 100%;
+    }
+
+    embed, video, audio, iframe {
       display: block;
       overflow: hidden;
       margin: 20px auto;
-      width: 100%;
+      width: 100% !important;
       max-width: 100%;
-      height: 0;
+      height: 0 !important;
       padding-bottom: 56.25%; // 16:9 ratio
     }
   }
