--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -12,11 +12,14 @@
 // blocks
 @import "block-socials";
 @import "block-language";
+@import "block-meta-menu-level-2";
 
 // nodes
 @import "node-page";
 @import "node-webform";
 @import "node-course";
+@import "node-location";
+@import "user-profile";
 
 // views
 @import "view-banners";
@@ -24,3 +27,4 @@
 @import "view-courses";
 @import "view-course-tabs";
 @import "view-course-times";
+@import "view-team";
