--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -10143,8 +10143,129 @@ form#user-login {
 .node-webform {
   padding-bottom: 30px;
 }
-.node-webform div.col-sm-12 {
+.node-webform .row div.col-sm-12 {
   width: 100%;
+}
+.node-webform .row div.col-sm-12 .field-name-body {
+  margin-bottom: 30px;
+}
+.node-webform .row div.col-sm-12 .field-name-body h1,
+.node-webform .row div.col-sm-12 .field-name-body h2,
+.node-webform .row div.col-sm-12 .field-name-body h3,
+.node-webform .row div.col-sm-12 .field-name-body h4,
+.node-webform .row div.col-sm-12 .field-name-body h5,
+.node-webform .row div.col-sm-12 .field-name-body h6 {
+  font-family: 'SohoGothicProRegular', serif;
+  font-size: 13px;
+}
+@media screen and (min-width: 480px) {
+  .node-webform .row div.col-sm-12 .field-name-body h1,
+  .node-webform .row div.col-sm-12 .field-name-body h2,
+  .node-webform .row div.col-sm-12 .field-name-body h3,
+  .node-webform .row div.col-sm-12 .field-name-body h4,
+  .node-webform .row div.col-sm-12 .field-name-body h5,
+  .node-webform .row div.col-sm-12 .field-name-body h6 {
+    font-size: 2.21354167vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .node-webform .row div.col-sm-12 .field-name-body h1,
+  .node-webform .row div.col-sm-12 .field-name-body h2,
+  .node-webform .row div.col-sm-12 .field-name-body h3,
+  .node-webform .row div.col-sm-12 .field-name-body h4,
+  .node-webform .row div.col-sm-12 .field-name-body h5,
+  .node-webform .row div.col-sm-12 .field-name-body h6 {
+    font-size: 17px;
+  }
+}
+.node-webform .row div.col-sm-12 .field-name-body h1,
+.node-webform .row div.col-sm-12 .field-name-body h2,
+.node-webform .row div.col-sm-12 .field-name-body h3 {
+  font-size: 15px;
+}
+@media screen and (min-width: 480px) {
+  .node-webform .row div.col-sm-12 .field-name-body h1,
+  .node-webform .row div.col-sm-12 .field-name-body h2,
+  .node-webform .row div.col-sm-12 .field-name-body h3 {
+    font-size: 3.125vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  .node-webform .row div.col-sm-12 .field-name-body h1,
+  .node-webform .row div.col-sm-12 .field-name-body h2,
+  .node-webform .row div.col-sm-12 .field-name-body h3 {
+    font-size: 24px;
+  }
+}
+.node-webform .row div.col-sm-12 .field-name-body p,
+.node-webform .row div.col-sm-12 .field-name-body div,
+.node-webform .row div.col-sm-12 .field-name-body tbody td {
+  font-family: 'SohoGothicProLight', serif;
+  font-size: 14px;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -o-hyphens: auto;
+  hyphens: auto;
+}
+@media screen and (min-width: 480px) {
+  .node-webform .row div.col-sm-12 .field-name-body p,
+  .node-webform .row div.col-sm-12 .field-name-body div,
+  .node-webform .row div.col-sm-12 .field-name-body tbody td {
+    font-size: 16px;
+  }
+}
+.node-webform .row div.col-sm-12 .field-name-body li {
+  font-family: 'SohoGothicProLight', serif;
+  font-size: 14px;
+}
+@media screen and (min-width: 480px) {
+  .node-webform .row div.col-sm-12 .field-name-body li {
+    font-size: 16px;
+  }
+}
+.node-webform .row div.col-sm-12 .field-name-body pre,
+.node-webform .row div.col-sm-12 .field-name-body address {
+  font-family: 'SohoGothicProLightItalic' serif;
+  font-size: 14px;
+}
+@media screen and (min-width: 480px) {
+  .node-webform .row div.col-sm-12 .field-name-body pre,
+  .node-webform .row div.col-sm-12 .field-name-body address {
+    font-size: 16px;
+  }
+}
+.node-webform .row div.col-sm-12 .field-name-body hr {
+  border: 0;
+  border-bottom: 2px solid #cccccc;
+  background: none;
+}
+.node-webform .row div.col-sm-12 .field-name-body table,
+.node-webform .row div.col-sm-12 .field-name-body tr,
+.node-webform .row div.col-sm-12 .field-name-body th,
+.node-webform .row div.col-sm-12 .field-name-body td {
+  border-color: #cccccc;
+}
+.node-webform .row div.col-sm-12 .field-name-body img {
+  display: block;
+  margin: 0 auto;
+  width: 80%;
+  height: auto;
+  max-width: 100%;
+}
+.node-webform .row div.col-sm-12 .field-name-body embed,
+.node-webform .row div.col-sm-12 .field-name-body video,
+.node-webform .row div.col-sm-12 .field-name-body audio,
+.node-webform .row div.col-sm-12 .field-name-body iframe {
+  display: block;
+  overflow: hidden;
+  margin: 20px auto;
+  width: 100% !important;
+  max-width: 100%;
+  height: 0 !important;
+  padding-bottom: 56.25%;
 }
 ul.webform-submission-actions {
   margin: 10px 0;
@@ -10305,6 +10426,24 @@ ul.webform-submission-actions li a:active {
   max-width: 100%;
   height: 0 !important;
   padding-bottom: 56.25%;
+}
+form.webform-client-form a {
+  color: #cc3333;
+  text-decoration: none;
+}
+form.webform-client-form a:hover,
+form.webform-client-form a.active,
+form.webform-client-form a:focus {
+  text-decoration: underline;
+}
+form.webform-client-form a {
+  color: #cc3333;
+  text-decoration: none;
+}
+form.webform-client-form a:hover,
+form.webform-client-form a.active,
+form.webform-client-form a:focus {
+  text-decoration: underline;
 }
 body.kvcollege_section form.webform-client-form a {
   color: #95ba40;
@@ -10543,6 +10682,12 @@ form.webform-client-form .webform-component textarea {
   border: 1px solid #ebebeb;
   background-color: #ffffff;
 }
+form.webform-client-form .webform-component input:focus,
+form.webform-client-form .webform-component textarea:focus {
+  border: 1px solid #cc3333;
+  -webkit-box-shadow: inset 0 0 3px #cc3333;
+  box-shadow: inset 0 0 3px #cc3333;
+}
 body.kvcollege_section form.webform-client-form .webform-component input:focus,
 body.kvcollege_section form.webform-client-form .webform-component textarea:focus {
   border: 1px solid #95ba40;
@@ -10588,6 +10733,7 @@ form.webform-client-form .webform-component select {
 form.webform-client-form .webform-component select:focus,
 form.webform-client-form .webform-component select:active {
   outline: none;
+  border: 1px solid #cc3333;
 }
 body.kvcollege_section form.webform-client-form .webform-component select:focus,
 body.kvcollege_section form.webform-client-form .webform-component select:active {
@@ -10716,22 +10862,22 @@ form.webform-client-form .webform-component.webform-container-inline select {
     width: 58.333333%;
   }
 }
-form.webform-client-form .webform-component.webform-container-inline.webform-component--adresse--anrede .form-radios .radio {
+form.webform-client-form .webform-component.webform-container-inline[class*="anrede"] .form-radios .radio {
   display: inline-block;
 }
-form.webform-client-form .webform-component.webform-container-inline.webform-component--personliche-angaben--gebdate .webform-container-inline {
+form.webform-client-form .webform-component.webform-container-inline[class*="date"] .webform-container-inline {
   position: relative;
   right: auto;
   width: 100%;
 }
-form.webform-client-form .webform-component.webform-container-inline.webform-component--personliche-angaben--gebdate .webform-container-inline select {
+form.webform-client-form .webform-component.webform-container-inline[class*="date"] .webform-container-inline select {
   position: static;
   display: inline-block;
   margin: 0 -2px;
   width: 33.33333%;
 }
 @media screen and (min-width: 480px) {
-  form.webform-client-form .webform-component.webform-container-inline.webform-component--personliche-angaben--gebdate .webform-container-inline {
+  form.webform-client-form .webform-component.webform-container-inline[class*="date"] .webform-container-inline {
     position: absolute;
     right: 0;
     width: 58.333333%;
@@ -10747,6 +10893,27 @@ form.webform-client-form div.form-actions {
 }
 form.webform-client-form div.form-actions button.webform-submit {
   min-width: 50%;
+  display: inline-block;
+  margin: 0;
+  padding: 15px 20px;
+  font-family: 'SohoGothicProRegular', serif;
+  font-size: 20px;
+  line-height: 1;
+  letter-spacing: 1.5px;
+  text-transform: capitalize;
+  color: #ffffff;
+  outline: none;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  border: none;
+  background-color: #cc3333;
+}
+form.webform-client-form div.form-actions button.webform-submit:hover,
+form.webform-client-form div.form-actions button.webform-submit:focus {
+  color: #cc3333;
+  border: none;
+  background: #ffffff;
 }
 body.kvcollege_section form.webform-client-form div.form-actions button.webform-submit {
   display: inline-block;
@@ -11438,7 +11605,7 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   border: none;
 }
 .view-locations.view-display-id-block .view-content .views-bootstrap-tab-plugin-style .tab-content .tab-pane {
-  padding: 25px;
+  padding: 25px 10px 25px 25px;
   font-family: 'SohoGothicProLight', serif;
   font-size: 16px;
   line-height: 1;
