--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -45,6 +45,7 @@
       }
 
       .course-subject {
+        // fachgebiet title
         h2 {
           margin: 30px 0 0;
           padding: 10px 0;
