--- a/all/themes/pixelgarage/less/pxlComponents/view-locations.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-locations.less
@@ -105,7 +105,7 @@
         border: none;
 
         .tab-pane {
-          padding: 25px;
+          padding: 25px 10px 25px 25px;
           font-family: @pxl-text-font-light;
           font-size: 16px;
           line-height: 1;
