--- a/all/themes/pixelgarage/less/pxlComponents/view-contacts.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-contacts.less
@@ -27,6 +27,7 @@
         display: block;
         margin: 20px 0 0;
         text-align: center;
+        border: none;
 
         li {
           display: inline-block;
@@ -60,80 +61,93 @@
         border: none;
 
         .tab-pane {
+          overflow-y: auto;
           padding: 20px;
-          height: 40px + @pxl-contact-img-height;
+          height: 40px + 1.2*@pxl-contact-img-height;
           font-family: @pxl-text-font-light;
           font-size: @font-size-base;
           line-height: 1;
 
-          .views-field-field-picture {
-            float: left;
-            margin-right: 20px;
+          .tab-pane-item {
+            display: inline-block;
+            margin: 0 -2px 10px;
+            padding-right: 10px;
+            width: 100%;
+            vertical-align: top;
 
-            .field-content {
-              img {
-                height: @pxl-contact-img-height;
-                width: auto;
-              }
+            @media @tablet {
+              width: 50%;
             }
-          }
 
-          .views-field-title {
-            margin-bottom: 5px;
-            font-family: @pxl-text-font;
-            color: @text-color;
-          }
+            .views-field-field-picture {
+              float: left;
+              margin-right: 20px;
 
-          .views-field-field-phone {
-            margin-bottom: 5px;
-            .field-content {
-              padding-left: 10px;
-
-              &:before {
-                display: inline-block;
-                content: '\f095';
-                font-family: @pxl-icon-font;
-                width: 25px;
-              }
-            }
-          }
-
-          .views-field-field-email {
-            .field-content {
-              overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-
-              a {
-                color: @text-color;
-
-                &:hover {
-                  text-decoration: underline;
+              .field-content {
+                img {
+                  height: @pxl-contact-img-height;
+                  width: auto;
                 }
               }
+            }
 
-              &:before {
-                display: inline-block;
-                content: '\f0e0';
-                font-family: @pxl-icon-font;
-                width: 25px;
+            .views-field-title {
+              margin-bottom: 5px;
+              font-family: @pxl-text-font;
+              color: @text-color;
+            }
+
+            .views-field-field-phone {
+              margin-bottom: 5px;
+              .field-content {
+                padding-left: 10px;
+
+                &:before {
+                  display: inline-block;
+                  content: '\f095';
+                  font-family: @pxl-icon-font;
+                  width: 25px;
+                }
               }
             }
-          }
 
-          body.kvcollege_section & {
-            .segment-color(@pxl-color-hso-kv);
-          }
-          body.hscollege_section & {
-            .segment-color(@pxl-color-hso-hs);
-          }
-          body.kscollege_section & {
-            .segment-color(@pxl-color-hso-ks);
-          }
-          body.excollege_section & {
-            .segment-color(@pxl-color-hso-ex);
-          }
+            .views-field-field-email {
+              .field-content {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
 
+                a {
+                  color: @text-color;
+
+                  &:hover {
+                    text-decoration: underline;
+                  }
+                }
+
+                &:before {
+                  display: inline-block;
+                  content: '\f0e0';
+                  font-family: @pxl-icon-font;
+                  width: 25px;
+                }
+              }
+            }
+
+            body.kvcollege_section & {
+              .segment-color(@pxl-color-hso-kv);
+            }
+            body.hscollege_section & {
+              .segment-color(@pxl-color-hso-hs);
+            }
+            body.kscollege_section & {
+              .segment-color(@pxl-color-hso-ks);
+            }
+            body.excollege_section & {
+              .segment-color(@pxl-color-hso-ex);
+            }
+
+          }  //tab-pane-item
         }
       }
     }
